# internals/model/token/token.go
@@ -1,0 +1,6 @@
+package token
+
+type Request struct {
+	User_name string
+	Password  string
+}
